--- a/front-end/index.html
+++ b/front-end/index.html
@@ -36,8 +36,11 @@
         </div>
         <div id="navbar-collapse-1" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
+                <li ng-show="loggedIn">
+					<p class="navbar-text">Signed in as {{username}}</p>
+                </li>
                 <li class="dropdown">
-                    <a ng-href="/#/" class="dropdown-toggle" data-toggle="dropdown">Sign Up</a>
+                    <a ng-href="/#/" class="dropdown-toggle" data-toggle="dropdown" ng-hide="loggedIn">Sign Up</a>
                     <ul class="dropdown-menu">
 						<li>
 							<div class="col-sm-10 regi-dropdown">
@@ -152,7 +155,7 @@
 						</li>
 					</ul>
                 </li>
-                <li ng-hide="loggedIn">
+                <li ng-show="loggedIn">
                     <a ng-href="#/logout">Log Out</a>
                 </li>
             </ul>
