--- a/front-end/index.html
+++ b/front-end/index.html
@@ -36,8 +36,18 @@
         </div>
         <div id="navbar-collapse-1" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li ng-show="loggedIn">
-					<p class="navbar-text">Signed in as {{username}}</p>
+                <li ng-show="loggedIn" class="dropdown">
+
+
+					<p class="navbar-text dropdown-toggle" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Signed in as {{username}} <span class="caret"></span></p>
+					 <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
+					    <li><a href="#">Profile</a></li>
+					    <li><a href="#">Orders</a></li>
+					    <li><a href="/#/powdertype">Options</a></li>
+					    <li role="separator" class="divider"></li>
+					    <li><a ng-href="#/logout">Log Out</a></li>
+					  </ul>
+
                 </li>
                 <li class="dropdown">
                     <a ng-href="/#/" class="dropdown-toggle" data-toggle="dropdown" ng-hide="loggedIn">Sign Up</a>
@@ -155,9 +165,14 @@
 						</li>
 					</ul>
                 </li>
-                <li ng-show="loggedIn">
-                    <a ng-href="#/logout">Log Out</a>
-                </li>
+				<li class="dropdown" ng-click="loadCart()" ng-show="loggedIn">
+					<p class="navbar-text dropdown-toggle" id="dropdownMenu4" data-toggle="dropdown">Cart <span class="glyphicon glyphicon-shopping-cart"></span> <span class="caret"></span></p>
+					 <ul class="dropdown-menu list-group" aria-labelledby="dropdownMenu4" >
+						<a href="" ng-repeat="item in cartArray"> <li class="list-group-item" >{{item}} <span class="badge">Edit</span></li></a>
+
+						<a href="/#/checkout" class="text-center"><li><button class="btn btn-primary">Checkout</button></li></a>
+					</ul>
+				</li>
             </ul>
     	</div>
     </div>
