--- a/front-end/index.html
+++ b/front-end/index.html
@@ -19,6 +19,7 @@
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
 </head>
 <body ng-controller="mainController">
@@ -32,25 +33,22 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#/" class="navbar-brand"><img src="images/brand.png"></a>
+            <a href="#/" class="navbar-left"><img src="images/logo-small.png"></a><p class="navbar-brand">Protein Source</p>
         </div>
         <div id="navbar-collapse-1" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-show="loggedIn" class="dropdown">
-
-
 					<p class="navbar-text dropdown-toggle" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Signed in as {{username}} <span class="caret"></span></p>
 					 <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
 					    <li><a href="#">Profile</a></li>
 					    <li><a href="#">Orders</a></li>
 					    <li><a href="/#/powdertype">Options</a></li>
 					    <li role="separator" class="divider"></li>
-					    <li><a ng-href="#/logout">Log Out</a></li>
+					    <li><a ng-click="logout()" ng-href="/#/">Log Out</a></li>
 					  </ul>
-
                 </li>
-                <li class="dropdown">
-                    <a ng-href="/#/" class="dropdown-toggle" data-toggle="dropdown" ng-hide="loggedIn">Sign Up</a>
+                <li class="dropdown" >
+                    <a id="sign-up-btn" ng-href="/#/" class="dropdown-toggle" data-toggle="dropdown" ng-hide="loggedIn">Sign Up</a>
                     <ul class="dropdown-menu">
 						<li>
 							<div class="col-sm-10 regi-dropdown">
@@ -181,8 +179,10 @@
 <div id="views" ng-view></div>
 
 
-<footer class="text-center">
-	<p>Footer</p>
+<footer class="footer">
+	<div class="container footer-container">
+		<p class="text-muted">&#169; Protein Source</p>
+	</div>
 </footer>
 
 
