--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					    <li><a href="#">Orders</a></li>
 					    <li><a href="/#/powdertype">Options</a></li>
 					    <li role="separator" class="divider"></li>
-					    <li><a ng-click="logout()" ng-href="/">Log Out</a></li>
+					    <li><a ng-click="logout()" ng-href="http://ericettensohn.com/ecommerce/#/">Log Out</a></li>
 					  </ul>
                 </li>
                 <li class="dropdown" >
